1.0b8
-----
* Better support for singleton (non-album) tracks. The "singleton" path
  format can be used to customize where these tracks are stored. While
  importing, you can choose the "as Tracks" (T) option to add
  singletons to your library. The query "singleton:true" matches only
  singleton tracks; "singleton:false" matches only album tracks.
* The importer/autotagger system has been heavily refactored. If
  anything breaks as a result, please let me know.
* Support for album art embedded in files. The "embedcoverart" plugin
  provides this functionality. (Thanks, daenney!)
* The "distance" number, which quantifies how different an album's
  current and proposed metadata are, is now displayed as "similarity"
  instead. This should be less noisy and confusing; you'll now see
  99.5% instead of 0.00489323.
* The multithreaded importer should now abort (either by selecting
  aBort or by typing ^C) much more quickly. Previously, it would try
  to get a lot of work done before quitting; now it gives up as soon
  as it can.
* Added a new plugin event, "album_imported", which is called every
  time an album is added to the library. (Thanks, Lugoues!)
* A new plugin method, register_listener, is an imperative alternative
  to the @listen decorator (Thanks again, Lugoues!)
* In path formats, $albumartist now falls back to $artist (as well as
  the other way around).
* Fix some crashes when deleting files that don't exist.
* Fix adding individual tracks in BPD.

1.0b7
-----
* "Various artists" releases are handled much more gracefully. The
  autotagger now sets the "comp" flag on albums whenever the album is
  identified as a "various artists" release by MusicBrainz. Also,
  there is now a distinction between the "album artist" and the "track
  artist", the latter of which is never "Various Artists" or other such
  bogus stand-in. (Thanks to Jonathan Buchanan for the bulk of the
  implementation!)
* The directory hierarchy can now be customized based on release type.